widget 05/06: fix scrollbar

--- a/client/src/widgets/05/style.scss
+++ b/client/src/widgets/05/style.scss
@@ -186,9 +186,7 @@
           display: grid;
           grid-template-columns: 1fr 1fr;
           gap: 5px;
-          width: calc(100% + 10px);
-          padding-right: 10px;
-          scrollbar-gutter: stable both-edges;
+          scrollbar-gutter: stable;
           scrollbar-width: thin;
           scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
           align-items: start;
