--- a/client/src/widgets/06/style.scss
+++ b/client/src/widgets/06/style.scss
@@ -430,7 +430,6 @@
           scrollbar-gutter: stable both-edges;
           scrollbar-width: thin;
           scrollbar-color: rgba(0, 0, 0, 0.25) transparent;
-          width: 100%;
 
           // Scrollbar Styles
           &::-webkit-scrollbar {
